--- a/bibtex.bib
+++ b/bibtex.bib
@@ -85,3 +85,37 @@
   langid = {english},
   file = {/home/aucf/ARCHIVES/Papiers/PDF/OM_20.pdf}
 }
+
+
+@article{auclair_non-hydrostatic_2018,
+  title = {A Non-Hydrostatic Non-{{Boussinesq}} Algorithm for Free-Surface Ocean Modelling},
+  author = {Auclair, F. and Bordois, L. and Dossmann, Y. and Duhaut, T. and Paci, A. and Ulses, C. and Nguyen, C.},
+  year = {2018},
+  month = dec,
+  journal = {Ocean Modelling},
+  volume = {132},
+  pages = {12--29},
+  issn = {14635003},
+  doi = {10.1016/j.ocemod.2018.07.011},
+  urldate = {2019-08-22},
+  abstract = {A three-mode time-split algorithm is proposed to simulate non-hydrostatic ocean processes in a natural way: fast pressure adjustments via acoustic waves are explicitly represented. The full set of compressible Navier--Stokes equations is integrated for a free-surface ocean with three time-steps respectively associated to the internal, external and compressible (non Boussinesq) modes. The resulting three-mode algorithm can be implemented either in a fully compressible configuration or in a ``pseudo-compressible'' configuration by artificially lowering acoustic-wave velocities to reduce computational costs. The present description of the three-mode algorithm focuses in the first place on the simulation of non-hydrostatic processes in free-surface ocean models.},
+  langid = {english},
+  file = {/home/aucf/ARCHIVES/Papiers/PDF/Auclair_etal_OM_2018.pdf}
+}
+
+@article{shchepetkin_regional_2005,
+  title = {The Regional Oceanic Modeling System ({{ROMS}}): A Split-Explicit, Free-Surface, Topography-Following-Coordinate Oceanic Model},
+  shorttitle = {The Regional Oceanic Modeling System ({{ROMS}})},
+  author = {Shchepetkin, Alexander F. and McWilliams, James C.},
+  year = {2005},
+  month = jan,
+  journal = {Ocean Modelling},
+  volume = {9},
+  number = {4},
+  pages = {347--404},
+  issn = {14635003},
+  doi = {10.1016/j.ocemod.2004.08.002},
+  urldate = {2019-08-22},
+  langid = {english},
+  file = {/home/aucf/ARCHIVES/BIBLIO/Modelling/Shchepetkin_McWilliams_OM05.pdf}
+}
