--- a/main.tex
+++ b/main.tex
@@ -363,7 +363,7 @@ Cependant, cette équation ne retranscrit \FAdel{pas vraiment} \FAadd{ qu'une pa
 \subsubsection{Concept de modes de propagation}
 
 A la manière de la propagation d'une onde électromagnétique dans une fibre optique \FAadd{(référence?)}, l'onde acoustique ici se réfléchit à la fois à la surface et au fond de l'océan. Cela conduit notamment à des interférences entre les différents fronts réfléchis. Les interférences constructrices forment ce qu'on appelle des "modes de propagation". On numérote également ces modes: les numéros correspondent au nombre de réflexion avant l'interférence. On comprend donc que plus le mode est élevé, moins le front est rapide. \\
-Là il me manque une image mais j'en trouve pas de satisfaisante, je la créerai peut etre moi même. \FAadd{ Cite et reprend l'ouvrage de Jensen (je pense te l'avoir donné en pdf... il est assez pédagogique (à mon goût en tout cas) et contient de nombreuses illustrations.}
+Là il me manque une image mais j'en trouve pas de satisfaisante, je la créerai peut être moi même. \FAadd{ Cite et reprend l'ouvrage de Jensen (je pense te l'avoir donné en pdf... il est assez pédagogique (à mon goût en tout cas) et contient de nombreuses illustrations.}
 %c dans un milieu non borné
 \\
 
@@ -442,15 +442,15 @@ Finalement, on comprend que plusieurs facteurs rentrent en jeu lorsqu'il s'agit 
 \FAadd{Petit conclusion partielle ici aussi... Tu peux d'ailleurs reprendre le paragraphe précédent. Prends juste un peu de recule: que t'apporte cette partie de l'étude ?}
 \section{Discussion et conclusion}
 
-\FAadd{Nous avions commencé en discuter, tu peux rédiger 2-3 parties:
+\FAadd{Nous avions commencé en discuter, tu peux rédiger 2-3 parties:}
 \begin{itemize}
-    \item Discussion des résultats scientifiques: résume de façons très synthétiques tes résultats sur ton choix de processus de sous-mésoéchelle.
-    \item Conclusion scientifique: tu as souligné en introduction l'importance du spectre de sous-mésoéchelle... En quoi ton étude permet-elle d'avancer ? Tu peux par exemple discuter du fait que cette étude ciblant les processus permet de mieux comprendre la dynamique spécifique de chaque processus bien sûr mais aussi d'évaluer la pertinence du protocole de modélisation numérique avec CROCO: aspects numériques et HPC.
-    \item Perspectives scientifiques: tu peux par exemple discuter du fait qu'une petite partie seulement du chemin est faite avec ces études académiques... L'océan étant très non-linéaires, la somme des processus ne permets malheureusement pas de conclure sur la qualité de la prévision!
-    \item A toi de voir, mais je pense qu'il te faut rédiger un petit paragraphe pour la conclusion du stage à proprement parlé en reprenant les objectifs fixés par l'ENS.
-    
-\end{itemize}}
+    \item \FAadd{Discussion des résultats scientifiques: résume de façons très synthétiques tes résultats sur ton choix de processus de sous-mésoéchelle.}
+    \item \FAadd{Conclusion scientifique: tu as souligné en introduction l'importance du spectre de sous-mésoéchelle... En quoi ton étude permet-elle d'avancer ? Tu peux par exemple discuter du fait que cette étude ciblant les processus permet de mieux comprendre la dynamique spécifique de chaque processus bien sûr mais aussi d'évaluer la pertinence du protocole de modélisation numérique avec CROCO: aspects numériques et HPC.}
+    \item \FAadd{Perspectives scientifiques: tu peux par exemple discuter du fait qu'une petite partie seulement du chemin est faite avec ces études académiques... L'océan étant très non-linéaires, la somme des processus ne permets malheureusement pas de conclure sur la qualité de la prévision!}
+    \item \FAadd{A toi de voir, mais je pense qu'il te faut rédiger un petit paragraphe pour la conclusion du stage à proprement parlé en reprenant les objectifs fixés par l'ENS. C'est en particulier dans cette partie que tu peux de nouveau prendre un peu de recul pour revenir sur les difficultés éventuellement rencontrées...}
+\end{itemize}
 
+\FAadd{Une fois cette première écriture terminée, je te conseille de prendre le temps pour une relecture complète afin de vérifier: (i) toutes tes notations, numérotations (souvent dans un rapport de ce type, on donne une table des acronymes...) et surtout (ii) la cohérence du raisonnement proposé: quel était l' objectif affiché ? As-tu répondu à cet objectif ? Si tel n'est pas le cas, as-tu justifié les pbs rencontrés.}
 \newpage
 
 
